# webassembly-projects

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
snake-game/: Cargo.toml
snake-game/src/: lib.rs
snake-game/www/: index.html  index.ts  package-lock.json  package.json
sudoku-solver/: Cargo.toml
sudoku-solver/src/: lib.rs  solver.rs
sudoku-solver/www/: bootstrap.ts  index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
